; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/init/extr_init.c_add_session.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/init/extr_init.c_add_session.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i64 (%struct.TYPE_11__*, %struct.TYPE_10__*, %struct.TYPE_10__*, i32)* }
%struct.TYPE_10__ = type { i32, %struct.TYPE_9__** }
%struct.TYPE_9__ = type { %struct.TYPE_9__* }

@session_db = common dso_local global %struct.TYPE_11__* null, align 8
@.str = private unnamed_addr constant [14 x i8] c"insert %d: %s\00", align 1
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_9__*)* @add_session to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_session(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  %3 = alloca %struct.TYPE_10__, align 8
  %4 = alloca %struct.TYPE_10__, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %5 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %3, i32 0, i32 1
  store %struct.TYPE_9__** %6, %struct.TYPE_9__*** %7, align 8
  %8 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %3, i32 0, i32 0
  store i32 8, i32* %8, align 8
  %9 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %4, i32 0, i32 1
  store %struct.TYPE_9__** %2, %struct.TYPE_9__*** %9, align 8
  %10 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %4, i32 0, i32 0
  store i32 8, i32* %10, align 8
  %11 = load %struct.TYPE_11__*, %struct.TYPE_11__** @session_db, align 8
  %12 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %11, i32 0, i32 0
  %13 = load i64 (%struct.TYPE_11__*, %struct.TYPE_10__*, %struct.TYPE_10__*, i32)*, i64 (%struct.TYPE_11__*, %struct.TYPE_10__*, %struct.TYPE_10__*, i32)** %12, align 8
  %14 = load %struct.TYPE_11__*, %struct.TYPE_11__** @session_db, align 8
  %15 = call i64 %13(%struct.TYPE_11__* %14, %struct.TYPE_10__* %3, %struct.TYPE_10__* %4, i32 0)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %1
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_9__*, %struct.TYPE_9__** %19, align 8
  %21 = load i32, i32* @errno, align 4
  %22 = call i32 @strerror(i32 %21)
  %23 = call i32 @emergency(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), %struct.TYPE_9__* %20, i32 %22)
  br label %24

24:                                               ; preds = %17, %1
  ret void
}

declare dso_local i32 @emergency(i8*, %struct.TYPE_9__*, i32) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
